public/stylesheets/style.less
@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url(/fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
       src: local('Material Icons'),
       local('MaterialIcons-Regular'),
       url(/fonts/MaterialIcons-Regular.woff2) format('woff2'),
       url(/fonts/MaterialIcons-Regular.woff) format('woff'),
       url(/fonts/MaterialIcons-Regular.ttf) format('truetype');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  width: 1em;
  height: 1em;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

// Rules for sizing the icon.
.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

// Rules for using icons as black on a light background.
.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }

// Rules for using icons as white on a dark background.
.material-icons.md-light { color: rgba(255, 255, 255, 1); }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }

body, button, input, select, textarea {
  font-size: 14px;
  font-family: RobotoDraft, Roboto, "Noto Sans CJK SC", "Lucida Grande", Helvetica, "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
}

a {
  color: #00B7FF;
}

.clearfix {
  clear: both;
  height: 0px;
  width: 0px;
  display: block;
}

/* Title Bar */
#menuBtn {
  margin-right: 16px;
}

#brand > md-icon svg {
  height: 24px;
  width: 24px;
  position: relative;
  margin-top: -2px;
}

#brand > md-icon svg path {
  fill: white !important;
}

/* Login form */
.login-dialog {
  width: 340px;
}

.login-dialog md-dialog-content {
  padding: 0;
}

.lab-dialog-header{
  padding: 0;
  color: white;
  background-color: #2196F3;
  
  font-weight: 300;
  font-size: 20px;
  letter-spacing: .01em;
  line-height: 64px;

  .lab-dialog-title{
    padding: 0 0 0 16px;
  }

  .lab-dialog-close {
    border-radius: 0;
    height: 64px;
    width: 64px;
    margin: 0;
  }
}

.login-dialog .md-actions {
  padding: 0 6px;
}

.login-dialog .register-label {
  padding-left: 4px;
}

.login-dialog md-list {
  padding: 0;
}

.login-dialog md-input-container {
  padding: 2px 18px 26px;
}

/* Cards */
.cards {
  overflow-x: hidden;
  overflow-y: scroll;

  padding: 0 32px;

  md-card {
    margin: 32px auto;
    max-width: 1100px;
    display: block;
    position: relative;

    md-card-content {
      padding: 16px 32px;
      display: block;
    }
  }
}

.ratio {
  width: 100%;
  position: relative;

  &.ratio-16-9 {
    padding-bottom: 56.25%;
  }

  &.ratio-16-10 {
    padding-bottom: 62.5%;
  }

  &.ratio-4-3 {
    padding-bottom: 75%;
  }

  &.ratio-3-2 {
    padding-bottom: 66.66%;
  }

  .ratio-content {
    position: absolute;
    top:0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}


.image-scrim-top {
  background-image: linear-gradient(180deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.2) 30%, rgba(0,0,0,0) 100%);
    color: white;
}

.image-scrim-bottom {
  background-image: linear-gradient(0deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.2) 30%, rgba(0,0,0,0) 100%);
    color: white;
}

/* Slider */
.slider {
  margin: 20px auto;
  max-width: 1100px;
  position: relative;
  
  .slider-control {
    opacity: 0.5;
    transform: scale(1);
    transition: opacity 0.2s ease-in-out, transform 0.2s ease-out;
    height: 64px;
    width: 64px;

    position: absolute;
    top: 50%;
    margin: -32px 0 0 0;

    &.right {
      right: -16px;
    }
    &.left {
      left: -16px;
    }

    &:hover {
      opacity: 1;
    }

    &.hidden {
      transform: scale(0);
      transition: opacity 0.2s ease-in-out, transform 0.2s ease-in;
    }
  }

  .slider-content {
    transition: transform 0.2s ease-in-out;
    transform: translateX(0px);
    display: inline-block;

    width: 1000000px; //Infinity

    md-card {
      margin: 0 0 0 32px;
      width: 128px;
      height: 192px;
      float: left;

      &:first-child {
        margin-left: 0;
      }

      .slider-item-top {
        width: 96px;
        height: 96px;
        margin: 16px;
      }
      .slider-item-content {
        padding: 0 16px;
        line-height: 16px;
        font-size: 16px;
        font-weight: 600;
      }
    }
  }
}

.slider-area {
  padding: 20px 32px;
  width: 100%;
  margin: 32px -32px;
  overflow: hidden;
  background: #BDBDBD;

  & .slider-title {
    display: block;
    margin: auto;
    max-width: 1100px;
    padding: 0 32px;
    box-sizing: border-box;
  }
}

/* Expandable Cards */

md-card.expandable {
  cursor: pointer;
  transition: box-shadow 0.5s ease-in-out;

  &.hidden {
    transition: none;
    box-shadow: none;
  }

  &.expanding{
    margin: 0;
    position: fixed;
    cursor: default;
    transition-property: top, left, height, width, opacity, background-color;
    transition-duration: 0.5s, 0.5s, 0.5s, 0.5s, 0.5s, 0.15s;
    transition-delay: 0s, 0s, 0s, 0s, 0s, 0.35s;
    transition-timing-function: ease-in, ease-in, ease-in, ease-in, ease-out, ease-in-out;

    opacity: 0;
  }
}

/* History Manipulation */

.history-overlap {
  transition: opacity 0.2s ease-in;
  opacity: 0;

  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  &.active {
    transition: opacity 0.2s ease-out;
    opacity: 1;
  }
}

